dr01-python-microservices6/k8s-test6/ingress/ingress-dm-ds-jenkins.yaml
# /home/cpa/Documents/CPA/44_JENKINS/DM.JENKINS/DM-SP04-C04-JENKINS-CPA-MAY2024/dm-ds-cdo-may24-jenkins/dr01-python-microservices6/k8s-test4/ingress/ingress-dm-ds-jenkins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: dev
spec:
  rules:
  - host: my-dm-jenkins.com
#  - host: 192.168.20.1
    http:
      paths:
      - path: /api/v1/casts
        pathType: Prefix
        backend:
          service:
            name: cast-service
            port:
              number: 8005
